# eth

./: .gitmodules  CMakeLists.txt  README.md  ReadMe  ReadMe.rtf  SimSim.cpp  WriterTest.cpp  clamprgns.py  ecx.env  mk_layout  partition.py  resample.py
ReadMe.rtfd/: TXT.rtf
SimSim/: CMakeLists.txt  ReadMe  SimSim.cpp  WriterTest.cpp  partition-vti.py  partition.py
config/mac/: .ECX.cmake.swp  ECX.cmake  env.mac  pvol-icet.cmake  pvol-ospray.cmake  pvol.cmake
config/maverick/: ECX.cmake  SimSim.cmake  pvol-icet.cmake  pvol-ospray.cmake  pvol.cmake
install/: env
radial/: CMakeLists.txt  ReadMe
test/: ReadMe  eightBalls-cinema.json  eightBalls-simsim.json  eightBalls.json  mkdata.py  radial.json  wavelet-cinema.json  wavelet.json
test/radial/: CMakeLists.txt  radial.cxx
