cmake_minimum_required(VERSION 2.8.7)
project(SimSim)
find_package(VTK REQUIRED)
include(${VTK_USE_FILE})
add_executable(SimSim SimSim.cpp)
add_executable(writer WriterTest.cpp)
target_link_libraries(SimSim ${VTK_LIBRARIES})
target_link_libraries(WriterTest ${VTK_LIBRARIES})
install(TARGETS SimSim WriterTest DESTINATION bin)

