cmake_minimum_required(VERSION 2.8.7)
project(SimSim)
find_package(VTK REQUIRED)
include(${VTK_USE_FILE})
add_executable(SimSim SimSim.cpp)
add_executable(WriterTest WriterTest.cpp)
target_link_libraries(SimSim ${VTK_LIBRARIES} ${OPENGL_gl_LIBRARY})
target_link_libraries(WriterTest ${VTK_LIBRARIES} ${OPENGL_gl_LIBRARY})
install(TARGETS SimSim WriterTest DESTINATION bin)
install(PROGRAMS partition-vti.py clamprgns.py mk_layout  partition.py resample.py DESTINATION bin)
install(FILES MyServerSocket.h DESTINATION include)

